[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ctscn/cutscenebutton.png" type="Texture" id=1]
[ext_resource path="res://assets/ctscn/chartalk1.png" type="Texture" id=2]
[ext_resource path="res://assets/ctscn/cutscenebackground.png" type="Texture" id=3]
[ext_resource path="res://Cutscene.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/m5x7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ctscn/enemy portrait1.png" type="Texture" id=6]
[ext_resource path="res://assets/ctscn/enemy portrait2.png" type="Texture" id=7]
[ext_resource path="res://assets/ctscn/enemy portrait3.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "talk",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0

[node name="Cutscene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 128, 96 )
texture = ExtResource( 3 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 48, 48 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Enemy" type="AnimatedSprite" parent="."]
position = Vector2( 192, 64 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="TextBackground" type="Sprite" parent="."]
position = Vector2( 128, 96 )
texture = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 113.0
margin_right = 96.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "Person"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 128.0
margin_right = 250.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 2 )
text = "Blah, blah, blah!"
autowrap = true
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipLabel" type="Label" parent="."]
anchor_right = 0.514
margin_left = 130.0
margin_top = 177.0
margin_right = 127.416
margin_bottom = 193.0
rect_scale = Vector2( 0.992762, 0.994248 )
custom_fonts/font = SubResource( 2 )
text = "Press [Space] to skip"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 3 )
anims/typewriter_animation = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_right = 256.0
margin_bottom = 192.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_top = 112.0
margin_right = 256.0
margin_bottom = 192.0
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
